cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER clang++)
project(neighbor_search)
# add_subdirectory(src)
set(CMAKE_BUILD_TYPE release)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
# aux_source_directory(src/*.cpp src_list)
file(GLOB src_list "src/*.cpp")
include_directories("include")
add_executable(ns ${src_list})

